# machine.academy

./: .gitignore  .gitmodules  MacademyTest.sln  MademyTest.sln  README.md  macademy.sln
CLMath/: CLMath.csproj  CLSourceProvider.cs  ComputeDevice.cs  IActivationFunction.cs  MathLib.cs  packages.config
CLMath/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
CLMath/Resources/: CLKernel.txt
Chat/: Chat.csproj  Program.cs
Macademy/: IWeightInitializer.cs  Layer.cs  Network.cs  Utils.cs  packages.config
Macademy/OpenCL/: CLSourceProvider.cs  ComputeDevice.cs
Macademy/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Mademy/: CLNetwork.cs  Calculator.cs  ComputeDevice.cs  IActivationFunction.cs  IErrorFunction.cs  IWeightInitializer.cs  Kernel.cl  Layer.cs  Macademy.csproj  Mademy.csproj  MathLib.cs  Network.cs  Neuron.cs  Solver.cs  TrainingSuite.cs  Utils.cs  packages.config
Mademy/OpenCL/: CLSourceProvider.cs  ComputeDevice.cs  ComputeFramework.cs
Mademy/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Mademy/Resources/: CLKernel.txt
MademyTest/: Form1.Designer.cs  Form1.cs  Form1.resx  MademyTest.csproj  Program.cs  SandboxApp.csproj
MademyTest/Properties/: Settings.Designer.cs
NewsProc/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NewsAnalyzer.csproj  TrainingDialog.xaml  TrainingDialog.xaml.cs
NumberRecognize/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  LoadingWindow.Designer.cs  LoadingWindow.cs  Main.Designer.cs  Main.cs  NetworkConfig.Designer.cs  NetworkConfig.cs  NumberRecognize.csproj  Program.cs  TrainingWindow.Designer.cs  TrainingWindow.cs
NumberRecognize/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
OpenCl.DotNetCore.Interop/: OpenCl.DotNetCore.Interop.csproj
OpenCl.DotNetCore.Interop/CommandQueues/: CommandQueueProperty.cs
SandboxApp/: Form1.Designer.cs  Form1.cs  Program.cs  SandboxApp.csproj
SandboxApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
TestConsole/: Program.cs  TestConsole.csproj
Testing/: ComputeDeviceValidator.cs  ModuleTests.cs  ReferenceNetwork1JSON.json  TestUtils.cs  Testing.csproj  UtilTests.cs  Utils.cs
Testing/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Testing/Resources/: ReferenceNetwork1JSON.txt
TrainedNetworks/: Identity5.json  MNIST.json  test.nnef
UnitTestProject1/: ModuleTest.csproj  ModuleTests.cs  Testing.csproj  UnitTest1.cs
UnitTestProject1/Properties/: Resources.resx
WebApps/Evo/: drawing.js  entity.js  index.html  initialNetwork.js  main.css  neuralnet.js
WebApps/NumberRecognize/: drawing.js  index.html  main.css  network1.json  network2.json  network3.json
WebApps/common/: neuralnet.js
docs/: README.md
macademy.core/: CPUComputeDevice.cs  Calculator.cs  ComputeDevice.cs  ComputeDeviceFactory.cs  ComputeDeviceUtil.cs  IActivationFunction.cs  IErrorFunction.cs  Layer.cs  Macademy.csproj  Network.cs  OpenCLKernels.cl  TrainingSuite.cs  Utils.cs
macademy_cpp/: .clang-format  CMakeLists.txt  compiler_flags.cmake
macademy_cpp/console/: CMakeLists.txt  console_app.h  main.cpp
macademy_cpp/macademy_cpp/: CMakeLists.txt  compile_shaders.py
macademy_cpp/macademy_cpp/include/: common.h  compute_device_factory.h  compute_tasks.h  cpu_compute_backend.h  default_weight_initializer.h  half.hpp  i_buffer.h  i_compute_backend.h  i_compute_device.h  i_weight_initializer.h  network.h  training.h  training_suite.h  utils.h
macademy_cpp/macademy_cpp/include/cpu_backend/: cpu_compute_backend.h
macademy_cpp/macademy_cpp/include/opencl_backend/: opencl_buffer.h  opencl_common.h  opencl_compute_device.h
macademy_cpp/macademy_cpp/include/vulkan_backend/: shader_module.h  shader_specialization.h  vulkan_buffer.h  vulkan_command_pool.h  vulkan_common.h  vulkan_compute_device.h  vulkan_compute_kernel.h  vulkan_compute_pipeline.h  vulkan_descriptor_pool.h  vulkan_device.h  vulkan_instance.h  vulkan_shaders.glsl.h
macademy_cpp/macademy_cpp/include/vulkan_backend/shaders/: common.glsl  compile_shaders.py  constants.h  kernel_apply_gradient.glsl  kernel_apply_gradient.glsl.h  kernel_apply_gradient.glsl.spv  kernel_calc_single_layer.glsl  kernel_calc_single_layer.glsl.h  kernel_calc_single_layer.glsl.spv  kernel_calc_single_layer_constants.h  kernel_training_apply_gradient_constants.h  kernel_training_backward_pass.glsl  kernel_training_backward_pass.glsl.h  kernel_training_backward_pass.glsl.spv  kernel_training_backward_pass_base.glsl  kernel_training_backward_pass_constants.h  kernel_training_backward_pass_swadd.glsl  kernel_training_backward_pass_swadd.glsl.h  kernel_training_backward_pass_swadd.glsl.spv  kernel_training_forward_pass.glsl  kernel_training_forward_pass.glsl.h  kernel_training_forward_pass.glsl.spv  kernel_training_forward_pass_constants.h
macademy_cpp/macademy_cpp/src/: compute_device_factory.cpp  compute_tasks.cpp  cpu_compute_backend.cpp  network.cpp  training.cpp  utils.cpp
macademy_cpp/macademy_cpp/src/cpu_backend/: cpu_compute_backend.cpp
macademy_cpp/macademy_cpp/src/opencl_backend/: compile_kernel.py  opencl_compute_device.cpp  opencl_kernels.cl  opencl_kernels.cl.h
macademy_cpp/macademy_cpp/src/vulkan_backend/: shader_module.cpp  vulkan_buffer.cpp  vulkan_command_pool.cpp  vulkan_compute_device.cpp  vulkan_compute_kernel.cpp  vulkan_compute_pipeline.cpp  vulkan_descriptor_pool.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_shaders.glsl  vulkan_shaders.spirv
macademy_cpp/macademy_utils/: CMakeLists.txt
macademy_cpp/macademy_utils/include/macademy_utils/: console_app.h
macademy_cpp/macademy_utils/src/: console_app.cpp
macademy_cpp/mandelbrot/: CMakeLists.txt  main.cpp
macademy_cpp/mnist_digit_trainer/: CMakeLists.txt  main.cpp
macademy_cpp/poly_inverse/: CMakeLists.txt  main.cpp
macademy_cpp/test/: CMakeLists.txt  test_compute_devices.cpp  test_main.cpp  test_training.cpp
macademy_cpp/text_model/: CMakeLists.txt  main.cpp
macademy_cpp/tools/clangformat/: format.py
(+20 files in other folders)
